# deep-research

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 20260427_0001_create_users_reports.py  20260428_0002_create_research_jobs.py
deep_research/: __init__.py  app.py  auth.py  config.py  research_manager.py  schemas.py
deep_research/agents/: __init__.py  email_agent.py  searcher.py  writer.py
deep_research/db/: __init__.py  base.py  models.py  persistence.py  queries.py  session.py
deep_research/services/: __init__.py
frontend/: .env.example  .env.production  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/researches/: page.tsx
frontend/app/researches/[id]/: page.tsx
frontend/components/: app-header.tsx  chat-panel.tsx  panel.tsx  report-panel.tsx  status-panel.tsx
frontend/lib/: types.ts
